# dotfiles

./: .bash_profile  .bashrc  .bunfig.toml  .checkpoints-test-file  .claude.json  .claude.json.example  .envrc  .envrc.example  .envrc.global  .extract_urlview  .gitattributes  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .global_gitignore  .mcp.json  .pre-commit-config.yaml  .stow-global-ignore  .stow-local-ignore  .tmux-resurrect-1password.conf  .tmux.conf  .urlview  .vimrc  .workspace-manifest.json  .zshrc  AGENTS.md  ANSWER-gstack-gap.md  ANSWER-postiz.md  ANSWER.md  Brewfile  CLAUDE.md  CV.tex  CV_WORKFLOW_ROADMAP.md  DEVELOPER_TOOLS_GUIDE.md  DOLT_REMOTE.md  FZF_TODO.md  GEMINI.md  INSTALL.md  LOCAL_HISTORY_FIX.md  (+48 more)
.agent-browser/: config.json
.beads/: interactions.jsonl  metadata.json
.checkpoints/: config.json  pre-prompt-state.json
.claude/: .superclaude-metadata.json  AGENTS.md  CLAUDE.md  COMMANDS.md  DEVCONTAINER_SETUP.md  FLAGS.md  HASHIMOTO-ANALYSIS.md  MCP.md  MODES.md  ORCHESTRATOR.md  PERSONAS.md  PERSONAS.md.archive  PRINCIPLES.md  RULES.md  bash_commands.json  bun_enforcement.json  hookify.block-neovim-edits.local.md  hookify.warn-brewfile-parity.local.md  hookify.warn-dangerous-bash.local.md  hookify.warn-fish-config.local.md  hookify.warn-setup-parity.local.md  keybindings.json  (+9 more)
.claude-code-router/: README.md  config.json
scripts/gmailclean/: README.md  gmailclean  gmailclean.py  obsidian.py  ollama.py  pyproject.toml  setup.sh  test_gmailclean.py  test_obsidian.py  test_ollama.py
test_rust/: Cargo.toml
test_rust/src/: main.rs
(+2187 files in other folders)
