[project]
name = "gmailclean"
version = "1.0.0"
description = "Gmail inbox cleanup: unsubscribe, organize, and centralize"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "rich>=13.0.0",
]

[project.scripts]
gmailclean = "gmailclean:main"
